--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.2",
+    "pinia": "^2.0.34",
     "router": "^1.3.7",
     "vue": "^3.2.25",
     "vue-router": "^4.1.6"
